# LR8

./: .gitignore
poetry-demo/: Dockerfile  pyproject.toml
poetry-demo/src/poetry_demo/: N1.py  main.py
src/poetry_demo/: Deepseek.py  N1.py  N5.py  main.py
